--- a/java/pom.xml
+++ b/java/pom.xml
@@ -16,6 +16,7 @@
         <google-guava.version>18.0</google-guava.version>
         <junit.version>4.12</junit.version>
         <gson.version>2.3.1</gson.version>
+        <log4j.version>2.3</log4j.version>
     </properties>
 
     <build>
@@ -61,6 +62,16 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
 
     </dependencies>
