--- a/java/pom.xml
+++ b/java/pom.xml
@@ -17,6 +17,8 @@
         <junit.version>4.12</junit.version>
         <gson.version>2.3.1</gson.version>
         <log4j.version>2.3</log4j.version>
+        <apache-commons-io.version>2.4</apache-commons-io.version>
+        <joda-time.version>2.8.2</joda-time.version>
     </properties>
 
     <build>
@@ -72,6 +74,16 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${apache-commons-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
         </dependency>
 
     </dependencies>
