--- a/java/pom.xml
+++ b/java/pom.xml
@@ -19,6 +19,7 @@
         <log4j.version>2.3</log4j.version>
         <apache-commons-io.version>2.4</apache-commons-io.version>
         <joda-time.version>2.8.2</joda-time.version>
+        <spring-test.version>4.2.1.RELEASE</spring-test.version>
     </properties>
 
     <build>
@@ -84,6 +85,12 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda-time.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-test.version}</version>
         </dependency>
 
     </dependencies>
