--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <version>${spring-test.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.takari.junit</groupId>
+            <artifactId>takari-cpsuite</artifactId>
+            <version>1.2.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
