--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <apache-commons-lang3.version>3.3.2</apache-commons-lang3.version>
         <google-guava.version>18.0</google-guava.version>
         <junit.version>4.12</junit.version>
+        <hamcrest.version>1.3</hamcrest.version>
         <gson.version>2.3.1</gson.version>
         <log4j.version>2.3</log4j.version>
         <apache-commons-io.version>2.4</apache-commons-io.version>
@@ -60,6 +61,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>${hamcrest.version}</version>
         </dependency>
 
         <dependency>
