--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
         <apache-commons-io.version>2.4</apache-commons-io.version>
         <joda-time.version>2.8.2</joda-time.version>
         <spring-test.version>4.2.1.RELEASE</spring-test.version>
+        <takari-cpsuite.version>1.2.7</takari-cpsuite.version>
+        <assertj-core.version>3.9.0</assertj-core.version>
+        <spock-core.version>1.2-groovy-2.4</spock-core.version>
+        <groovy-all.version>2.4.15</groovy-all.version>
+        <byte-buddy.version>1.8.21</byte-buddy.version>
+        <objenesis.version>2.6</objenesis.version>
     </properties>
 
     <dependencies>
@@ -104,16 +110,45 @@
         <dependency>
             <groupId>io.takari.junit</groupId>
             <artifactId>takari-cpsuite</artifactId>
-            <version>1.2.7</version>
+            <version>${takari-cpsuite.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.9.0</version>
+            <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Spock/Groovy dependencies - Start-->
+        <!-- Mandatory dependencies for using Spock -->
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>${spock-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Optional dependencies for using Spock -->
+        <dependency> <!-- use a specific Groovy version rather than the one specified by spock-core -->
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy-all.version}</version>
+        </dependency>
+        <dependency> <!-- enables mocking of classes (in addition to interfaces) -->
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${byte-buddy.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency> <!-- enables mocking of classes without default constructor (together with CGLIB) -->
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>${objenesis.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--Spock/Groovy dependencies - End-->
+
     </dependencies>
 
 </project>
