--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Java 8 Practice</name>
+    <name>Java Practices</name>
 
     <parent>
         <groupId>com.heydev.java</groupId>
-        <artifactId>java</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>java-kotlin</artifactId>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <groupId>lambda.practice.one</groupId>
-    <artifactId>java8</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    
+    <artifactId>java</artifactId>
+    <version>1.1-SNAPSHOT</version>
+
 </project>
