--- a/kotlin/pom.xml
+++ b/kotlin/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.heydev.java</groupId>
-        <artifactId>java</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>java-kotlin</artifactId>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>kotlin</artifactId>
