--- a/lwjglPractice/pom.xml
+++ b/lwjglPractice/pom.xml
@@ -8,8 +8,8 @@
 
     <parent>
         <groupId>com.heydev.java</groupId>
-        <artifactId>java</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>java-kotlin</artifactId>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <groupId>com.heydev.java.game.lwjgl</groupId>
     <artifactId>lwjglpractice</artifactId>
