--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </modules>
 
     <groupId>com.heydev.java</groupId>
-    <artifactId>java</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>java-kotlin</artifactId>
+    <version>1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <build>
